add lagged behind

--- a/app/src/views/home/byservice1.ejs
+++ b/app/src/views/home/byservice1.ejs
@@ -11,7 +11,7 @@
     <div class="analytics-page">
         <div class="content">
             <h1>서비스 별 특이사항</h1>
-            <h3>월 별 사용자 수 </h3>
+            <h3>서비스 별 그래프</h3>
             <p class="analysis-paragraph">ㅁㄴㅇ</p>
             <img class="responsive-graph" src="https://i.imgur.com/KjZkkdI.png">
             <p class="analysis-paragraph">분석에 앞서 서비스 별 사용자 수와 총 사용 시간을 비교했다. 서비스의 인기도 편차가 매우 컸으며, 비슷한 사용자 수준에서도 게임 별 총 사용 시간이 크게 달라지는 양상을 보였다. 이것은 주어진 데이터에서 유저 수와 같은 표면적 지표 외에도, 1인 당 총 플레이 시간과 같은 게임 자체의 특성을 나타내는 지표들을 수집할 수 있다는 것을 의미한다. 따라서 이 연구에서는 개별 게임의 특성을 파악할 수 있는 지표들을 개발하고, 해당 지표들을 토대로 서비스와 유저 특성을 분석해 서비스 운영 고도화에 기여하고자 한다.</p>
