--- a/nexon_assignment_server/src/public/css/home/index.css
+++ b/nexon_assignment_server/src/public/css/home/index.css
@@ -23,11 +23,11 @@ overflow:visible;
 
 .main-menu {
 background:#212121;
-border-right:1px solid #e5e5e5;
+border-radius: 0.25em;
 position:absolute;
 top:0;
 bottom:0;
-height:30%;
+height:160px;
 left:0;
 width:60px;
 overflow:hidden;
@@ -148,6 +148,7 @@ body {
 .content {
     position: relative;
     z-index: 1;
+    border-radius: 0.25em;
     background: #FFFFFF;
     max-width: 1080px;
     margin: 0 auto 10px;
@@ -203,7 +204,12 @@ button:disabled {
 
 .responsive-graph {
   width: 50%;
-  height: 60%;
+  height: 50%;
+}
+
+.responsive-graph2 {
+  width: 40%;
+  height: 40%;
 }
 
 .analysis-paragraph {
