--- a/nexon_assignment_server/src/views/home/summary1.ejs
+++ b/nexon_assignment_server/src/views/home/summary1.ejs
@@ -31,91 +31,37 @@ hd<!DOCTYPE html>
     <nav class="main-menu">
         <ul>
             <li>
-                <a href="http://justinfarrow.com">
-                    <i class="fa fa-home fa-2x"></i>
-                    <span class="nav-text">
-                        Dashboard
-                    </span>
-                </a>
-            </li>
-            <li class="has-subnav">
-                <a href="#">
-                    <i class="fa fa-laptop fa-2x"></i>
-                    <span class="nav-text">
-                        Stars Components
-                    </span>
-                </a>
-                
-            </li>
-            <li class="has-subnav">
-                <a href="#">
-                    <i class="fa fa-list fa-2x"></i>
-                    <span class="nav-text">
-                        Forms
-                    </span>
-                </a>
-                
-            </li>
-            <li class="has-subnav">
-                <a href="#">
-                    <i class="fa fa-folder-open fa-2x"></i>
-                    <span class="nav-text">
-                        Pages
-                    </span>
-                </a>
-                
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fa fa-bar-chart-o fa-2x"></i>
-                    <span class="nav-text">
-                        Graphs and Statistics
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fa fa-font fa-2x"></i>
-                    <span class="nav-text">
-                        Quotes
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fa fa-table fa-2x"></i>
-                    <span class="nav-text">
-                        Tables
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fa fa-map-marker fa-2x"></i>
-                    <span class="nav-text">
-                        Maps
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
+                <a href="/">
                     <i class="fa fa-info fa-2x"></i>
                     <span class="nav-text">
-                        Documentation
+                        전체 현황 요약
                     </span>
                 </a>
             </li>
-        </ul>
-
-        <ul class="logout">
-            <li>
-                <a href="#">
-                    <i class="fa fa-power-off fa-2x"></i>
+            <li class="has-subnav">
+                <a href="/byservice1">
+                    <i class="fa fa-list fa-2x"></i>
                     <span class="nav-text">
-                        Logout
+                        서비스 별 특이사항
                     </span>
                 </a>
-            </li>  
+            </li>
+            <li>
+                <a href="/interservice1">
+                    <i class="fa fa-bar-chart-o fa-2x"></i>
+                    <span class="nav-text">
+                        서비스 사이의 관계
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="/user1">
+                    <i class="fa fa-table fa-2x"></i>
+                    <span class="nav-text">
+                        유저 그룹 관리
+                    </span>
+                </a>
+            </li>
         </ul>
     </nav>
 </body>
